Protect array-based put! and get! from overflow, where possible.